--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<p>Im glad this works so well.</p>
 	<p><a href="https://www.youtube.com/watch?v=P86N9FqNqso" target="_blank">This</a> video helped me  make this webapp.</p>
 </br>
+	<img src="./images/fog-machine.jpg" alt="fog machine" width="300px"/>
+	<img src="./images/ying_yang.jpg" alt="ying and yang" width="300px"/>
 	
 </body>
