adding AJAX soon

--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
 	<img src="./images/fog-machine.jpg" alt="fog machine" width="300px"/>
 	<img src="./images/ying_yang.jpg" alt="ying and yang" width="300px"/>
 	
+	<p>what else should i use to practice on this website, AJAX maybe</p>
+	
 </body>
