few changes nothing major

--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <head>
+	<link rel="stylesheet" href="./css/main.css">
+	<script src="./js/main.js"></script>
 	<title>JC First Test</title>
 </head>
 <body>
-	<h1>Welcome to my web app.</h1>
-	<p>Im glad this works so well.</p>
+
+	<!----what else should I use to practice on this website, AJAX maybe-->
+
+	<!-- Here is a list of things to practice in this site
+			> The main design will have sky box image of the weather in the location of the User
+			> How do you get the user location? without causing security issues.
+			> An Active clock and a weather forcast
+			> A test on the to-do list and a way to create a json file to save the data to. The json jata should be accessed when a password is entered. The data should be enrypted and the password should be the decryption Key - For practice
+			> A small calculator on the page for practice for the actual project to come.
+			> A small expense Tracker 
+			> A pdf creator that turns the data in the expense tracker or To do list into a pdf file
+	-->
+	
+	<div class="weatherBox">
+		<input type="text" name="cityName" placeholder="Please enter your City">
+		<button type="submit" name="submitButton">Submit</button>
+
+		<h1 class="name">City</h1>
+		<p class="description">Weather Forcast</p>
+		<p class="temp">0 degrees</p>
+	</div>
+	
+	<h1>Welcome to my JavaScript practice ground.</h1>
+	<p>I'm a full stack Java developer, and this is where I practice my front end skills and try out new things.</p>
 	<p><a href="https://www.youtube.com/watch?v=P86N9FqNqso" target="_blank">This</a> video helped me  make this webapp.</p>
 </br>
-	<img src="./images/fog-machine.jpg" alt="fog machine" width="300px"/>
-	<img src="./images/ying_yang.jpg" alt="ying and yang" width="300px"/>
 	
-	<p>what else should i use to practice on this website, AJAX maybe</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/P86N9FqNqso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 </body>
